# wordcloud-wasm

./: .gitignore  BENCHMARKS.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json
crate/: Cargo.toml
crate/benches/: layout.rs
crate/src/: bitmap.rs  datasets.rs  engine.rs  grid.rs  layout.rs  lib.rs  mask.rs  models.rs  raster.rs  scaffolds.rs  simd.rs  treemap.rs
crate/tests/: timing.rs
examples/: canvas.html  interactive.html  responsive.html  style.css  svg.html  text-input.html  treemap.html  worker.html
js/: client.d.ts  client.js  datasets.js  index.d.ts  index.js  threads.js  worker.js
pkg/: package.json  wordcloud_layout.d.ts  wordcloud_layout.js  wordcloud_layout_bg.wasm  wordcloud_layout_bg.wasm.d.ts
scripts/: _simd_bench.mjs
